playground/config/load-generator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: non-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: non-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator 
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
      - name: elasti-load-generator
        image: localhost:5001/load-generator:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"  
          limits:
            memory: "1Gi"
            cpu: "750m"
